@startuml
package "phongvan.hischoolbackend.entity" {
    class User {
        - id: Integer
        - username: String
        - email: String
        - phone: String
        - password: String
        - gender: String
        - active: boolean
        + roles: Set<Role>
        + school: School
        + student: Student
        + teacher: Teacher

        {methods}
    }

    class Role {
        {fields}
        {methods}
    }

    class School {
        {fields}
        {methods}
    }

    class Student {
        {fields}
        {methods}
    }

    class Teacher {
        {fields}
        {methods}
    }

    User --o Role : 0..*
    User --o School : 1
    User --o Student : 1
    User --o Teacher : 1
}
@enduml
